feat: create auth service
